--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- END -->
 </head>
@@ -48,8 +49,8 @@
 
             <div class="txt-hero">
 
-                <h1>Empréstimo</h1>
-                <p>Conheça o microcrédito Produtivo e Orietado do Ceape e mude de vida</p>
+                <h1>Ceape Microcrédito</h1>
+                <p>Conheça nosso microcrédito produtivo e orientado e mude de vida!</p>
                 <a href="#">
                     <button>Solicitar</button>
                 </a>
@@ -60,5 +61,179 @@
 
     </section>
 
+    <!-- PRODUTOS -->
+    <section class="produtos">
+        <div class="interface">
+
+            <article class="itens-container">
+
+                <div class="txt-itens">
+                    <h3>Ceape Fácil</h3>
+                    <p>Empréstimo para quem precisa de dinheiro rápido e fácil para quitar alguma dívida do empreendimento.</p>
+                </div>
+
+                <div class="img-itens">
+                    <img src="images/creditopessoal.png" alt="">
+                </div>
+
+            </article>
+
+            <article class="itens-container">
+
+                <div class="img-itens">
+                    <img src="images/capitaldegiro.png" alt="">
+                </div>
+
+                <div class="txt-itens">
+                    <h3>Capital de Giro</h3>
+                    <p>Empréstimo destinado ao financiamento das operações da empresa como para os demais custos e despesas.</p>
+                </div>
+
+            </article>
+
+            <article class="itens-container">
+
+                <div class="txt-itens">
+                    <h3>Reforma/Ampliação</h3>
+                    <p>Empréstimo ideal para o financiamento da reforma ou ampliação de seu empreendimento.</p>
+                </div>
+
+                <div class="img-itens">
+                    <img src="images/reforma.png" alt="">
+                </div>
+
+            </article>
+
+            <article class="itens-container">
+
+                <div class="img-itens">
+                    <img src="images/capitaldegiro.png" alt="">
+                </div>
+
+                <div class="txt-itens">
+                    <h3>Máquinas</h3>
+                    <p>Empréstimo destinado ao financiamento das operações da empresa como para os demais custos e despesas.</p>
+                </div>
+
+            </article>
+
+        </div>
+    </section>
+
+    <!-- AJUDAMOS -->
+    <section class="ajudamos">
+        <div class="titulo">
+            <h1>MELHORAMOS AS CONDIÇÕES DE VIDA DE MAIS DE 200.000 PESSOAS</h3>
+                <p>
+                    Fornecemos aos nossos clientes serviços de alta qualidade e reinvestimos os lucros em nossa própria estrutura, <br> uma política que nos levou ao crescimento, e ampliamos as atividades para vários pontos do Piauí.
+                </p>
+        </div>
+    </section>
+
+    <!-- BENEFICIOS -->
+    <section class="produtos">
+        <div class="titulo">
+            <h3>Benefícios Ceape</h3>
+                <p>
+                    Além de investir no seu negocio, o Ceape ainda reconhece seus clientes, com prêmios e dinheiro vivo.
+                </p>
+        </div>
+            <div class="flex">
+                <div class="produtos-box">
+                    <h3>Fidelização de Clientes</h3>
+                    <p>Acumule pontos e troque por prêmios!</p>
+                </div>
+                <div class="produtos-box">
+                    <h3>Dinheiro para seu Negócio</h3>
+                    <p>Capital de giro com as melhores taxas</p>
+                </div>
+                <div class="produtos-box">
+                    <h3>Indique e Ganhe</h3>
+                    <p>Indique um amigo e ganhe prêmios em dinheiro</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Casos de Sucesso -->
+    <section class="depoimentos">
+        <div class="container">
+            <h3>Casos de Sucesso</h3>
+            <p>Leia o que nossos clientes falam de nós pro mundo!</p>  
+            <div class="cards">
+                <!-- card item 1 -->
+                <div class="card-item">
+                    <p class="nome-user">Antonia Barbosa</p>
+                    <p class="agente">Atendida pelo agente Werberson de Esperantina</p>
+                    <p class="depoimento-user">
+                        "Eu e minhas companheiras do grupo estamos muito satisfeitas com a agilidade no atendimeto do Ceape e a forma como você nos atendeu esclarecendo todas as dúvidas."
+                    </p>
+                    <div class="estrelas">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+                <!-- end card item 1 -->
+                <!-- card item 2 -->
+                <div class="card-item">
+                    <p class="nome-user">Antonia Barbosa</p>
+                    <p class="agente">Atendida pelo agente Werberson de Esperantina</p>
+                    <p class="depoimento-user">
+                        "Eu e minhas companheiras do grupo estamos muito satisfeitas com a agilidade no atendimeto do Ceape e a forma como você nos atendeu esclarecendo todas as dúvidas."
+                    </p>
+                    <div class="estrelas">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+                <!-- end card 2 -->
+                <!-- card item 3 -->
+                <div class="card-item">
+                    <p class="nome-user">Antonia Barbosa</p>
+                    <p class="agente">Atendida pelo agente Werberson de Esperantina</p>
+                    <p class="depoimento-user">
+                        "Eu e minhas companheiras do grupo estamos muito satisfeitas com a agilidade no atendimeto do Ceape e a forma como você nos atendeu esclarecendo todas as dúvidas."
+                    </p>
+                    <div class="estrelas">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+                <!-- end card 3 -->
+            </div>
+        </div>
+    </section>
+    <!-- end casos de sucesso -->
+
 </body>
+
+<!-- Rodapé -->
+<footer>
+    <div class="interface">
+        <div class="line-footer">
+            <div class="flex">
+                <div class="btn-social">
+                    <a href="" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
+                    <a href="" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                    <a href="" target="_blank"><button><i class="bi bi-facebook"></i></button></a>
+                    <a href="" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
+                </div>
+                <div class="logo-footer">
+                    <img src="images/Logo.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>      
+</footer>
+
+    <script src="https://kit.fontawesome.com/549e03e356.js" crossorigin="anonymous"></script>
 </html>
