--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
 </head>
 <body>
 
-    <header>
+    <header id="header">
 
         <div class="interface">
 
-            <section class="logo">
+            <div class="flex">
+
                 <a href="#topo">
                     <img src="images/logo.png" alt="logotipo do site">
                 </a>
-            </section>
 
-            <section class="menu-desktop">
                 <nav>
                     <ul>
                         <li><a href="#topo">Inicio</a></li>
@@ -34,13 +33,12 @@
                         <li><a href="#">Trabalhe Conosco</a></li>
                     </ul>
                 </nav>
-            </section>
 
-            <section class="btn-contato">
-                <a href="#">
-                    <button>Solicite</button>
-                </a>
-            </section>
+                <div class="btn-contato">
+                    <a href="#"><button>Solicite</button></a>
+                </div>
+
+            </div>
 
         </div>
 
@@ -159,8 +157,6 @@
         </div>
     </section>
 
-   
-
     <!-- Casos de Sucesso -->
     <section class="depoimentos">
         <div class="container">
@@ -224,6 +220,8 @@
   <script>
     AOS.init();
    </script>
+
+   <script src="site.js"></script>
 
 </body>
 
