--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <!-- SOLICITAÇÃO -->
     <div class="container" id="form">
         <div class="imagem">
-            <img src="https://via.placeholder.com/300" alt="Imagem de exemplo">
+            <img src="images/solicite.jpg" alt="Imagem de exemplo">
         </div>
 
         <form class="formulario">
@@ -215,15 +215,24 @@
     <div class="interface">
         <div class="line-footer">
             <div class="flex">
+                <ul>
+
+                    <div class="logo-footer">
+                    <img src="images/Logo.png" alt="">
+                </div>
                 <div class="btn-social">
                     <a href="" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
                     <a href="" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
                     <a href="" target="_blank"><button><i class="bi bi-facebook"></i></button></a>
                     <a href="" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
                 </div>
-                <div class="logo-footer">
-                    <img src="images/Logo.png" alt="">
-                </div>
+                
+                </ul>
+
+                <ul>
+                    <h3></h3>
+                </ul>
+                
             </div>
         </div>
     </div>
