--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <nav>
                     <ul>
                         <li><a href="#topo">Inicio</a></li>
-                        <li><a href="#produto">Produtos</a></li>
-                        <li><a href="#">Benefícios</a></li>
+                        <li><a href="#produto">Sobre Nós</a></li>
+                        <li><a href="#">Nossos Contatos</a></li>
                         <li><a href="#">Trabalhe Conosco</a></li>
                     </ul>
                 </nav>
@@ -108,7 +108,7 @@
         <div class="titulo" data-aos="fade-up">
             <h1>NOSSOS PRODUTOS</h3>
                 <p>
-                    O empréstimo rápido e fácil, com as melhores taxas de juros do mercado,<br> acompanhamentos e
+                    O empréstimo rápido e fácil, com as melhores taxas de juros do mercado,<br> acompanhamento e
                     orientação técnica gratuita!
                 </p>
         </div>
@@ -124,17 +124,17 @@
             </div>
             <div class="produtos-box" data-aos="fade-up" data-aos-offset="200" data-aos-delay="100"
                 data-aos-duration="2000">
-                <h3>Capital de <br> Giro</h3>
+                <h3>Capital de Giro</h3>
                 <p>destinado ao financiamento das operações da empresa e custos/despesas operacionais.</p>
             </div>
             <div class="produtos-box" data-aos="fade-up" data-aos-offset="200" data-aos-delay="150"
                 data-aos-duration="2000">
-                <h3><br>Reforma</h3>
+                <h3>Reforma</h3>
                 <p>financiamento da reforma ou ampliação de seu empreendimento.</p>
             </div>
             <div class="produtos-box" data-aos="fade-up" data-aos-offset="200" data-aos-delay="170"
                 data-aos-duration="2000">
-                <h3><br>Máquinas</h3>
+                <h3>Máquinas</h3>
                 <p>Empréstimo destinado para a compra de máquinas, equipamentos.</p>
             </div>
         </div>
@@ -142,21 +142,54 @@
     </section>
 
     <!-- Beneficios -->
-    <section class="swiper">
+    <section class="titulo-depoi" id="titulo-depoi">
 
-        <div class="swiper-wrapper">
+        <div class="titulo">
+            <h1>Beneficios Ceape</h1>
+            <p>Além de investir no seu negocio, o Ceape ainda reconhece seus clientes,<br> com prêmios e dinheiro vivo.</p>
+        </div>
 
-            <div class="card">
-                <div class="card__image">
+    </section>
+
+    <section class="beneficios-container">
+
+        <div class="card__container">
+
+            <article class="card__article">
+                <div class="card__img">
                     <img src="images/solicite.jpg" alt="">
                 </div>
 
-                <div class="card__content">
+                <div class="card__data">
                     <span class="card__title">FIDELIDADE</span>
-                    <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, aperiam?</p>
-                    <button class="card__btn">Seja Cliente</button>
+                    <p class="card__text">Você pode acumular pontos que podem ser trocados por prêmios incríveis!</p>
+                    <a href="" class="card__button">Seja Cliente</a>
                 </div>
-            </div>
+            </article>
+
+            <article class="card__article">
+                <div class="card__img">
+                    <img src="images/solicite.jpg" alt="">
+                </div>
+
+                <div class="card__data">
+                    <span class="card__title">FIDELIDADE</span>
+                    <p class="card__text">Você pode acumular pontos que podem ser trocados por prêmios incríveis!</p>
+                    <a href="" class="card__button">Seja Cliente</a>
+                </div>
+            </article>
+
+            <article class="card__article">
+                <div class="card__img">
+                    <img src="images/solicite.jpg" alt="">
+                </div>
+
+                <div class="card__data">
+                    <span class="card__title">FIDELIDADE</span>
+                    <p class="card__text">Você pode acumular pontos que podem ser trocados por prêmios incríveis!</p>
+                    <a href="" class="card__button">Seja Cliente</a>
+                </div>
+            </article>
 
         </div>
 
