--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <nav>
                     <ul>
                         <li><a href="#topo">Inicio</a></li>
-                        <li><a href="#produto">Sobre Nós</a></li>
-                        <li><a href="#">Nossos Contatos</a></li>
+                        <li><a href="sobre.html">Sobre Nós</a></li>
+                        <li><a href="contato.html">Nossos Contatos</a></li>
                         <li><a href="#">Trabalhe Conosco</a></li>
                     </ul>
                 </nav>
@@ -56,51 +56,13 @@
 
             <div class="txt-hero">
 
-                <h1>Ceape Microcrédito</h1>
+                <h1>Empréstimo</h1>
                 <p>Conheça nosso microcrédito produtivo e orientado e mude de vida!</p>
-                <a href="#form">
-                    <button>Solicitar</button>
-                </a>
 
             </div>
 
         </div>
 
-    </section>
-
-    <!-- SOBRE -->
-    <section class="sobre">
-        <div class="interface">
-            <div class="flex">
-                <div class="img-sobre">
-                    <img src="images/solicite.jpg" alt="">
-                </div>
-                <div class="txt-sobre">
-                    <h2>SOBRE O <span>CEAPE</span></h2>
-                    <p>O CEAPE – PI (Centro de Apoio aos Pequenos Empreendimentos do Piauí) é uma Organização da
-                        Sociedade
-                        Civil de Interesse Público, fundada em 18 de dezembro de 1996 com a iniciativa da ESSOR, uma
-                        Organização Não Governamental de Desenvolvimento Francesa, em colaboração com o CEAPE Nacional e
-                        com
-                        o apoio de diversas entidades empresariais do Piauí.</p>
-                    <p>A organização promove a formação de grupos solidários nas comunidades, incentivando-os a buscar
-                        microcrédito para gerar emprego e renda, assegurando assim a sustentabilidade e fomentando o
-                        desenvolvimento socioeconômico dos pequenos empresários.</p>
-                    <p>Seu Conselho Diretor é composto por representantes voluntários de várias entidades empresariais
-                        locais, e a instituição conta ainda com o suporte de diversos parceiros que contribuem para o
-                        fortalecimento de suas atividades.</p>
-                    <p>O CEAPE – PI tem desempenhado um papel fundamental nas comunidades em que opera, elevando a renda
-                        dos beneficiados, fortalecendo pequenos empreendimentos, incentivando a cidadania, criando novos
-                        postos de trabalho e consolidando os existentes, por meio da oferta de microcrédito a pequenos
-                        empreendedores formais e informais.</p>
-
-                    <div class="btn-social">
-                        <a href=""><button>Saiba Mais</button></a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
     </section>
 
     <!-- PRODUTOS -->
@@ -139,60 +101,6 @@
             </div>
         </div>
         </div>
-    </section>
-
-    <!-- Beneficios -->
-    <section class="titulo-depoi" id="titulo-depoi">
-
-        <div class="titulo">
-            <h1>Beneficios Ceape</h1>
-            <p>Além de investir no seu negocio, o Ceape ainda reconhece seus clientes,<br> com prêmios e dinheiro vivo.</p>
-        </div>
-
-    </section>
-
-    <section class="beneficios-container">
-
-        <div class="card__container">
-
-            <article class="card__article">
-                <div class="card__img">
-                    <img src="images/solicite.jpg" alt="">
-                </div>
-
-                <div class="card__data">
-                    <span class="card__title">FIDELIDADE</span>
-                    <p class="card__text">Você pode acumular pontos que podem ser trocados por prêmios incríveis!</p>
-                    <a href="" class="card__button">Seja Cliente</a>
-                </div>
-            </article>
-
-            <article class="card__article">
-                <div class="card__img">
-                    <img src="images/solicite.jpg" alt="">
-                </div>
-
-                <div class="card__data">
-                    <span class="card__title">FIDELIDADE</span>
-                    <p class="card__text">Você pode acumular pontos que podem ser trocados por prêmios incríveis!</p>
-                    <a href="" class="card__button">Seja Cliente</a>
-                </div>
-            </article>
-
-            <article class="card__article">
-                <div class="card__img">
-                    <img src="images/solicite.jpg" alt="">
-                </div>
-
-                <div class="card__data">
-                    <span class="card__title">FIDELIDADE</span>
-                    <p class="card__text">Você pode acumular pontos que podem ser trocados por prêmios incríveis!</p>
-                    <a href="" class="card__button">Seja Cliente</a>
-                </div>
-            </article>
-
-        </div>
-
     </section>
 
     <!-- Casos de Sucesso -->
