--- a/contato.html
+++ b/contato.html
@@ -40,7 +40,7 @@
                     </ul>
                 </nav>
 
-                <div class="btn-contato">
+                <div class="btn-contato1">
                     <a href="#form"><button>Solicite</button></a>
                 </div>
 
@@ -78,13 +78,17 @@
                         <i class="bi bi-geo-alt-fill"></i>
                         <p>Rua Eliseu Martins, Nº 2095, Centro - Teresina-PI</p>
                     </div>
-                    <div class="left-side">
+                    <div>
                         <i class="bi bi-envelope-fill"></i>
                         <p>ceapepi@ceapepi.org.br</p>
                     </div>
-                    <div class="left-side">
+                    <div>
                         <i class="bi bi-telephone-fill"></i>
                         <p>+55 (86) 3089-9400</p>
+                    </div>
+                    <div>
+                        <i class="bi bi-instagram"></i>
+                        <p>@ceape.microcredito</p>
                     </div>
                 </div>
 
@@ -94,7 +98,7 @@
                         <input type="Email" placeholder="E-mail" required>
                         <input type="text" placeholder="Assunto" required>
                         <textarea cols="30" rows="10" placeholder="Sua Mensagem" required></textarea>
-                        <button class="contacto-btn">Enviar Mensagem</button>
+                        <button class="btn-contatoo">Enviar Mensagem</button>
                     </form>
                 </div>
 
