--- a/index.html
+++ b/index.html
@@ -209,28 +209,44 @@
 <!-- Rodapé -->
 <footer>
     <div class="interface">
-        <div class="line-footer">
-            <div class="flex">
-                <ul>
-
-                    <div class="logo-footer">
-                        <img src="images/Logo.png" alt="">
-                    </div>
-                    <div class="btn-social">
-                        <a href="" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
-                        <a href="" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
-                        <a href="" target="_blank"><button><i class="bi bi-facebook"></i></button></a>
-                        <a href="" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
-                    </div>
-
-                </ul>
-
-                <ul>
-                    <h3></h3>
-                </ul>
-
+        <ul>
+            <h3>Ceape Microcredito</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, magnam.</p>
+            <div class="btn-social">
+                <a href="" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
+                <a href="" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                <a href="" target="_blank"><button><i class="bi bi-facebook"></i></button></a>
+                <a href="" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
             </div>
-        </div>
+        </ul>
+
+        <ul>
+            <h3>Atendimento</h3>
+            <p>Matriz: (86) 3089-9400</p>
+            <p>ceapepi@ceapepi.org.br</p>
+            <p>08:00 ás 17:00 (seg a sexta)</p>
+            <p>CNPJ: 01.668.749/0001-74 - (Matriz)</p>
+            <p>CNPJ: 10.600.665/0001-90 - (Filial)</p>
+            <p>Centro de Apoio Aos Pequenos 
+                Microempreendedores do Piauí</p>
+        </ul>
+
+        <ul>
+            <h3>Serviços</h3>
+            <li><a href="">Produtos</a></li>
+            <li><a href="">Casos de Sucesso</a></li>
+            <li><a href="">Nossos Contatos</a></li>
+            <li><a href="">Denuncie</a></li>
+            <li><a href="">Trabalhe Conosco</a></li>
+            <li><a href="">Politica de Privacidade</a></li>
+        </ul>
+
+        <ul>
+            <h3>Links</h3>
+            <li><a href="">Intranet</a></li>
+            <li><a href="">WebMail</a></li>
+            <li><a href="">Area do Cliente</a></li>
+        </ul>
     </div>
 </footer>
 
