--- a/sobre.html
+++ b/sobre.html
@@ -140,7 +140,7 @@
 
             <article class="card__article">
                 <div class="card__img">
-                    <img src="images/solicite.jpg" alt="">
+                    <img src="images/image_2.png" alt="">
                 </div>
 
                 <div class="card__data">
@@ -152,12 +152,12 @@
 
             <article class="card__article">
                 <div class="card__img">
-                    <img src="images/solicite.jpg" alt="">
+                    <img src="images/image_3.jpg" alt="">
                 </div>
 
                 <div class="card__data">
-                    <span class="card__title">FIDELIDADE</span>
-                    <p class="card__text">Você pode acumular pontos que podem ser trocados por prêmios incríveis!</p>
+                    <span class="card__title">Dinheiro para seu Negócio</span>
+                    <p class="card__text">Créditos com as melhores taxas para seu empreendimento crescer!</p>
                     <a href="" class="card__button">Seja Cliente</a>
                 </div>
             </article>
@@ -168,8 +168,8 @@
                 </div>
 
                 <div class="card__data">
-                    <span class="card__title">FIDELIDADE</span>
-                    <p class="card__text">Você pode acumular pontos que podem ser trocados por prêmios incríveis!</p>
+                    <span class="card__title">Indique e Ganhe</span>
+                    <p class="card__text">Indique um amigo e ganhe prêmios em dinheiro!!</p>
                     <a href="" class="card__button">Seja Cliente</a>
                 </div>
             </article>
